# CompetitiveProgramming

./: .gitignore  Lis.cpp  input.txt  output.txt
AprilChallenge/: SJ1.cpp
AugustCircuit/: APStrings.cpp
Basic/: BItManipulation.cpp  Graph.cpp  LCM.cpp  SpaceRemoval.cpp  Subarray3.cpp  sum.cpp
Codejam/: Pylons.cpp
DecemberChallenge2018/: CHEFINTRO.cpp  MAXEP.cpp
DecemberChallenge2019/: PLMU.cpp  SUBSPLAY.cpp  WATSCORE.cpp
FebChallenge2018/: ARTBALAN.cpp  CHEFING.cpp  DEPCHEF.cpp  GUESSRT.cpp  HMAPPY2.cpp  MAGICJAR.cpp  MANRECT.cpp
FebCookOff/: SECPASS.cpp
GS/: Q1.cpp
JanuaryChallenge2019/: DIFNEIGH.cpp  DPAIRS.cpp  EARTSEQ.cpp  FANCY.cpp  HP18.cpp  MGAME.cpp  output.txt  output_ani.txt
JanuaryChallenge2020/: BRKBKS.cpp  CHEFPSA.cpp  CHFDORA.cpp  DYNAMO.cpp
JanuaryCircuits2019/: EqualMultisets.cpp  ShiftTheLetters.cpp  Subarrays.cpp
JulyChallenge2019/: SuperBalancedBrackets.cpp
Kickstart/: BuildingPalindromes.cpp  WiggleWalk.cpp  mural.cpp  trie.cpp
KickstartOctober2019/: BookReading.cpp  XORSUM.cpp
Kickstart_August_2019/: CherriesMesh.cpp  CodeEatSwitcher.cpp  StreetCheckers.cpp
MarchChallenge2019/: CHDIGER.cpp  CHNUM.cpp  CHONQ.cpp  CHONQ2.cpp  JAIN.cpp  JAIN2.cpp
NovemberCircuits2018/: AdditionError.cpp  Ratio.cpp
NovemberCookOff2018/: USF.cpp
OctoberChallenge2019/: MARM.cpp  S10E.cpp  SAKTAN.cpp
codeforces/: AlonyaAndSpreadsheet.cpp  ColorTheFence.cpp  DashaAndPassword.cpp  DimaAndBadXor.cpp  PaintingFence.cpp  PermuteDigits.cpp  Slime.cpp  (+2 more)
go/greetings/: BUILD.bazel  main.go
go/min_swaps_to_make_balanced/: BUILD.bazel  main.go
(+186 files in other folders)
