load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "min_swaps_to_make_balanced",
    srcs = ["main.go"],
    importpath = "github.com/SparshBansal/min_swaps_to_make_balanced",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "main",
    data = ["in.txt"],
    embed = [":min_swaps_to_make_balanced"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
)
